--- a/index.html
+++ b/index.html
@@ -1,14 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta name="description" content="qwerty" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Web Studio</title>
+  </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-
-<body>
-
-</body>
-
+  <body>
+    <header id="Studio">
+      <nav>
+        <a href="">Web<span>Studio</span></a>
+        <ul>
+          <il>
+            <a href="#Studio">Studio</a>
+          </il>
+          <il>
+            <a href="#Portfolio">Portfolio</a>
+          </il>
+          <il>
+            <a href="#Contacts">Contacts</a>
+          </il>
+        </ul>
+      </nav>
+      <address>
+        <ul>
+          <li>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li>
+            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+          </li>
+        </ul>
+      </address>
+    </header>
+    <main>
+      <!-- <section> -->
+      <!-- <h2 id="Portfolio">Portfolio</h2> -->
+      <!-- </section> -->
+    </main>
+    <footer>
+      <!-- <h3 id="Contacts">Contacts</h3> -->
+    </footer>
+  </body>
 </html>
