--- a/index.html
+++ b/index.html
@@ -108,6 +108,11 @@
       <!-- </section> -->
     </main>
     <footer>
+      <h2>Web<span>Studio</span></h2>
+      <p>
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
       <!-- <h3 id="Contacts">Contacts</h3> -->
     </footer>
   </body>
