--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <header id="Studio">
       <nav>
-        <a href="">Web<span>Studio</span></a>
+        <a href="./index.html">WebStudio</a>
         <ul>
           <li>
             <a href="#Studio">Studio</a>
@@ -41,33 +41,43 @@
       </section>
       <section>
         <h2 hidden>under hero</h2>
-        <h3>Strategy</h3>
-        <p>
-          Our goal is to identify the business problem to walk away with the
-          perfect and creative solution.
-        </p>
-        <h3>Punctuality</h3>
-        <p>
-          Bring the key message to the brand's audience for the best price
-          within the shortest possible time.
-        </p>
-        <h3>Diligence</h3>
-        <p>
-          Research and confirm brands that present the strongest digital growth
-          opportunities and minimize risk.
-        </p>
-        <h3>Technologies</h3>
-        <p>
-          Design practice focused on digital experiences. We bring forth a deep
-          passion for problem-solving.
-        </p>
+        <ul>
+          <li>
+            <h3>Strategy</h3>
+            <p>
+              Our goal is to identify the business problem to walk away with the
+              perfect and creative solution.
+            </p>
+          </li>
+          <li>
+            <h3>Punctuality</h3>
+            <p>
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
+            </p>
+          </li>
+          <li>
+            <h3>Diligence</h3>
+            <p>
+              Research and confirm brands that present the strongest digital
+              growth opportunities and minimize risk.
+            </p>
+          </li>
+          <li>
+            <h3>Technologies</h3>
+            <p>
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
+            </p>
+          </li>
+        </ul>
       </section>
       <section>
         <h2>Our Team</h2>
         <ul>
           <li>
             <img
-              src="/images/our-team/img-1.jpg"
+              src="./images/our-team/img-1.jpg"
               alt="Mark Guerrero"
               width="264"
               height="260" />
@@ -76,7 +86,7 @@
           </li>
           <li>
             <img
-              src="/images/our-team/img-2.jpg"
+              src="./images/our-team/img-2.jpg"
               alt="Tom Ford"
               width="264"
               height="260" />
@@ -85,7 +95,7 @@
           </li>
           <li>
             <img
-              src="/images/our-team/img-3.jpg"
+              src="./images/our-team/img-3.jpgg"
               alt="Camila Garcia"
               width="264"
               height="260" />
@@ -94,7 +104,7 @@
           </li>
           <li>
             <img
-              src="/images/our-team/img-4.jpg"
+              src="./images/our-team/img-4.jpg"
               alt="Daniel Wilson"
               width="264"
               height="260" />
@@ -108,7 +118,7 @@
       <!-- </section> -->
     </main>
     <footer>
-      <h2>Web<span>Studio</span></h2>
+      <a href="./index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
