--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
           </li>
           <li>
             <img
-              src="./images/our-team/img-3.jpgg"
+              src="./images/our-team/img-3.jpg"
               alt="Camila Garcia"
               width="264"
               height="260" />
